crates/solidity/testing/snapshots/bindings_output/contracts/constructor_invocation/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ConstantKeyword or Identifier or InternalKeyword or PrivateKeyword or PublicKeyword.
   ╭─[input.sol:2:16]
   │
 2 │     constructor(int _x) {}
   │                ──────┬─────  
   │                      ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract A {
   │          ┬  
   │          ╰── def: 1
 2 │     constructor(int _x) {}
   │     ─────┬─────  
   │          ╰─────── unresolved
   │ 
 5 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 2
 6 │     function foo() public {
   │              ─┬─  
   │               ╰─── def: 3
 7 │         new A({_x: 2});
   │             ┬  ─┬  
   │             ╰────── ref: 1
   │                 │  
   │                 ╰── unresolved
───╯
